profilelist1exp/unpackaged/objects/LOB_Mailbox_Administration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Country Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>LOB Mailbox Administrations</relationshipLabel>
        <relationshipName>LOB_Mailbox_Administrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <label>Support Email</label>
        <type>Email</type>
    </fields>
    <label>LOB Mailbox Administration</label>
    <nameField>
        <label>LOB Mailbox Administration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOB Mailbox Administrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_LOB_Mailbox_Admin_Create_Update</fullName>
        <active>true</active>
        <description>Only users with LOB title as &quot;GCC Global Program Manager&quot; should be allowed to create or update LOB mailbox administration records.</description>
        <errorConditionFormula>$User.LOB_Title__c  &lt;&gt; &quot;GCC Global Program Manager&quot;</errorConditionFormula>
        <errorMessage>Your &quot;LOB Title&quot; is not &quot;GCC Global Program Manager&quot;.You cannot create or update the details.</errorMessage>
    </validationRules>
</CustomObject>